--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,7 +5,7 @@
           padding-top: 118px;
           padding-bottom: 118px;      
           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-          url(../images/images1/hero/hero1480.jpg);
+          url('../images/images1/hero/hero1480.jpg');
           }
 
           @media screen and (min-device-pixel-ratio: 2),
@@ -13,7 +13,7 @@
           screen and(min-resolution:2dppx) {
           .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-              url(../images/images1/hero/hero2480.jpg);
+              url('../images/images1/hero/hero2480.jpg');
         }
       }
     }
@@ -23,7 +23,7 @@
           padding-top: 118px;
           padding-bottom: 118px;      
           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-              url(../images/images1/hero/hero1768.jpg);
+              url('../images/images1/hero/hero1768.jpg');
           }
         
         @media screen and (min-device-pixel-ratio: 2),
@@ -31,14 +31,14 @@
           screen and(min-resolution:2dppx) {
             .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../images/images1/hero/hero2768.jpg);
+            url('../images/images1/hero/hero2768.jpg');
           }
         }
       }
       @media screen and (min-width: 1200px) {
         .hero {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../images/images1/hero/imghero11200.jpg);
+            url('../images/images1/hero/imghero11200.jpg');
             padding-top: 200px;
             padding-bottom: 200px;   
         }
@@ -47,7 +47,7 @@
         screen and(min-resolution:2dppx) {
         .hero-section {
           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../images/images1/hero/imghero21200.jpg);
+            url('../images/images1/hero/imghero21200.jpg');
         }
       }
       }        
