--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -45,7 +45,7 @@
         @media screen and (min-device-pixel-ratio: 2),
         screem and(min-resolution:192dpi),
         screen and(min-resolution:2dppx) {
-        .hero-section {
+        .hero {
           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
             url('../images/images1/hero/imghero21200.jpg');
         }
