second_correct-commit

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -46,7 +46,7 @@
      }
      .footer-conteiner {
         display: flex;
-         justify-content: space-around;
+         justify-content: center;
          align-items: baseline;
          flex-wrap: wrap;
          padding-left: 64px;
