--- a/css/main.css
+++ b/css/main.css
@@ -282,9 +282,11 @@ h1, h2, h3, p {
         justify-content: space-around;
     width: 100%;
   }
+  .header-menu__navigatio {
+    margin-bottom: 32px;
+  }
   .site-nav {
     display: block;
-    margin-bottom: 300px;
     text-align: start;
   }
   .site-nav__item:not(:last-child) {
@@ -414,14 +416,22 @@ h1, h2, h3, p {
     z-index: 1;
   }
   .header-menu.is-open {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: absolute;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     background-color: #ffff;
     top: 0%;
     left: 0%;
     width: 100%;
     height: 100vh;
-    overflow: scroll;
   }
 }
 
@@ -903,7 +913,6 @@ h1, h2, h3, p {
 
 .modal__form {
   padding: 40px;
-  text-align: left;
   margin-left: auto;
   margin-right: auto;
 }
@@ -914,6 +923,12 @@ h1, h2, h3, p {
   font-weight: 700;
   line-height: 1.1;
   text-align: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .modal__text {
+    text-align: center;
+  }
 }
 
 .field {
@@ -930,6 +945,7 @@ h1, h2, h3, p {
 
 .field__name {
   margin-bottom: 4px;
+  text-align: left;
 }
 
 .field__user {
@@ -983,6 +999,7 @@ textarea:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  text-align: left;
   width: 100%;
   height: 120px;
   margin-top: 10px;
@@ -1043,7 +1060,7 @@ textarea:focus {
 
 .stile-agree {
   color: #757575;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -1052,7 +1069,7 @@ textarea:focus {
 
 .agree-text {
   color: var(--accent-text);
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -1844,8 +1861,9 @@ textarea:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
@@ -2458,6 +2476,7 @@ textarea:focus {
     display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+    margin: 0;
   }
   .clients-list__item {
     width: calc((100% - 6 * 30px) / 6);
