--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -32,8 +32,7 @@
         fill: var(--accent-text);
     }
     &__form {
-        padding: 40px;   
-        text-align: left;
+        padding: 40px;         
         margin-left: auto;
         margin-right: auto;
     }
@@ -42,7 +41,11 @@
         font-size: 20px;
         font-weight: 700;
         line-height: 1.1;
-        text-align: center;  
+        text-align: center; 
+
+        @media screen and (max-width: 1199px) {
+            text-align: center;            
+        } 
     }
 }
 .field {
@@ -53,6 +56,7 @@
 
     &__name {
         margin-bottom: 4px;
+        text-align: left;
     }
     &__user {
         width: 100%;
@@ -75,6 +79,8 @@
         fill: #2196F3;   
     }
 }
+
+
 textarea {
     padding: 12px 16px;
     resize: none;
@@ -95,6 +101,7 @@ textarea {
 .comment-form {
     display: flex;
     flex-direction: column;
+    text-align: left;
     width: 100%;
     height: 120px;
     margin-top: 10px; 
@@ -146,7 +153,7 @@ textarea {
 }
 .stile-agree {
     color: #757575;  
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -154,7 +161,7 @@ textarea {
 }
 .agree-text {
     color: var(--accent-text); 
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
