--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -147,9 +147,12 @@
         justify-content: space-around;
         width: 100%;
     }
+         
+    .header-menu__navigatio {
+        margin-bottom: 32px;
+    }
     .site-nav  {
-        display: block; 
-        margin-bottom: 300px; 
+        display: block;        
        text-align: start;
        
        &__item:not(:last-child) {
@@ -252,11 +255,13 @@
     .header-menu__btn.is-open .header-menu__icon-menu {
         display: none;
     }
+  
     .header-menu__btn:hover,
     .header-menu__btn:focus {
         fill: var(--accent-text)
     }   
-   .header-menu {          
+   .header-menu {   
+
         text-align: center;
         font-size: 20px;      
         display: none;    
@@ -266,14 +271,15 @@
         z-index: 1;                
         
         &.is-open {
-            display: block; 
+            display: flex; 
             position: absolute;
+            flex-direction: column;
+            justify-content: space-between;
             background-color: #ffff;
             top: 0%; 
             left: 0%;  
             width: 100%; 
-            height: 100vh;  
-            overflow: scroll;          
+            height: 100vh;                    
             }   
         }
     }
