--- a/css/main.css
+++ b/css/main.css
@@ -973,7 +973,7 @@ h1, h2, h3, p {
   fill: #2196F3;
 }
 
-textarea {
+.field__comment {
   padding: 12px 16px;
   resize: none;
   width: 100%;
@@ -981,6 +981,16 @@ textarea {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+}
+
+.field__comment:focus {
+  border-color: var(--accent-text);
+}
+
+textarea {
+  font-family: inherit;
+  line-height: 1.15;
+  margin: 0;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 250ms;
@@ -989,6 +999,18 @@ textarea {
 
 textarea:focus {
   border-color: var(--accent-text);
+}
+
+@media screen and (max-width: 1199px) {
+  textarea {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  textarea {
+    font-size: 14px;
+  }
 }
 
 .comment-form {
@@ -1051,30 +1073,63 @@ textarea:focus {
 
 .stile-name {
   color: #757575;
-  font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.01em;
   text-align: left;
 }
 
+@media screen and (max-width: 1199px) {
+  .stile-name {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .stile-name {
+    font-size: 14px;
+  }
+}
+
 .stile-agree {
   color: #757575;
-  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-align: left;
 }
 
+@media screen and (max-width: 1199px) {
+  .stile-agree {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .stile-agree {
+    font-size: 14px;
+  }
+}
+
 .agree-text {
   color: var(--accent-text);
-  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-align: left;
   text-decoration: underline;
+}
+
+@media screen and (max-width: 1199px) {
+  .agree-text {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .agree-text {
+    font-size: 14px;
+  }
 }
 
 .checkbox {
