--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -79,23 +79,36 @@
         fill: #2196F3;   
     }
 }
-
-
-textarea {
+.field__comment {
     padding: 12px 16px;
     resize: none;
-
     width: 100%;
     border: 1px solid #21212133;
     border-radius: 4px;
     outline: none;
-    cursor: pointer;  
+    cursor: pointer; 
+
+    &:focus {
+        border-color: var(--accent-text);
+    }
+}
+
+textarea {
+    font-family: inherit;    
+    line-height: 1.15;
+    margin: 0;
 
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
 
     &:focus {
         border-color: var(--accent-text);
+    }
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;        
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;        
     }
 }
 .comment-form {
@@ -145,28 +158,47 @@ textarea {
 
 .stile-name {
     color: #757575;
-    font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.01em;
     text-align: left;
+
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;        
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;        
+    }
 }
 .stile-agree {
-    color: #757575;  
-    font-size: 12px;
+    color: #757575;   
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-align: left;
+
+@media screen and (max-width: 1199px) {
+    font-size: 12px;        
+}
+@media screen and (min-width: 1200px) {
+    font-size: 14px;        
+}
+
 }
 .agree-text {
-    color: var(--accent-text); 
-    font-size: 12px;
+    color: var(--accent-text);   
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-align: left;
     text-decoration: underline;
+
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;        
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;        
+    }
 }
 .checkbox {
     appearance: none;
